# dot_files

./: .bashrc  .editorconfig  .eslintrc.json  .gitignore  .tern-project  .xbindkeysrc  .xsessionrc  DEVELOPMENT-README.md  README.md  arch-initial-setup.org  fish_history  history.org  libinput-gestures.conf  pyproject.toml  starship.toml
alacritty/: alacritty.toml
broot/: verbs.hjson
docs/: Demo.html  emacs.html
dotconfig/ptpython/: config.py
dunst/: dunstrc
emacs/: .gitignore
emacs/.emacs.d/: .gitignore  Cask  Demo.org  README.md  README.org  early-init.el  init.el
fish/: config.fish
fish/completions/: nvm.fish
fish/functions/: __bass.py  __can_run_command.fish  __nvm_run.fish  bass.fish  conda_init.fish  fish_prompt.fish  gnome_control.fish  lineate_vpn.fish  node.fish  npm.fish  npx.fish  nvm.fish  nvm_alias_command.fish  nvm_alias_function.fish  randr_dp_only.fish  randr_edp.fish  randr_hdmi.fish  set_nyu_env.fish  set_sap_env.fish  set_wyng_env.fish  suspendme.fish  wyng_clean.fish  wyng_ls_repos.fish  wyng_machine.fish  wyng_npm_install.fish  yarn.fish  (+1 more)
ghostty/: config
hypr/: hyprland.conf  hyprpaper.conf
i3/: .i3status.conf  config  i3status.conf
idea/: .ideavimrc
mako/: config
nushell/: config.nu  env.nu
nvim/: init.vim
ohmyzsh/: .zshenv  .zshrc
ops-tools/: README.org  inventory.ini  local-setup.yaml  vpn_setup.yaml
ranger/: rc.conf  rifle.conf
scripts/: keyboard.sh  lock.sh  qtile_autostart.sh  togif.sh  watch_waybar.sh
tmux/: .tmux.conf
urxvt/: .Xdefaults
vim/: .vimrc
waybar/: config  style.css
zellij/: config.kdl
(+86 files in other folders)
