[tool.poetry]
name = "dot_files"
version = "0.1.0"
description = ""
authors = ["Maxim Rurenko <mrurenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^5.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
